Fixed layout problems in Basic Filter

--- a/sass/basicFilter.scss
+++ b/sass/basicFilter.scss
@@ -4,11 +4,6 @@
     margin-bottom: 25px;
 
     .form-group {
-      &.basic-filter {
-        margin-left: -10px;
-        margin-bottom: 10px;
-      }
-
       .actions-term {
         padding-left: 0;
 
